--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,48 @@
     justify-content: center;
 }
 
+.buscar {
+    position: absolute;
+    padding: 5px;
+    left: 80%;
+    top: 0%;
+}
+
+.buscar input{
+    width: 0px;
+    height: 40px;
+    padding: 0 20px;
+font-size: 18px;
+color: black;
+outline: none;
+border: 1px solid silver;
+border-radius: 30px;
+transition: al 0.6s ease ;
+}
+
+.btn{
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: purple;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.buscar:hover input{
+    width: 240px;
+}
+
+.buscar input:focus{
+    width: 240px;
+}
+
 .form {
     display: flex;
     justify-content: flex-end;
@@ -29,9 +71,18 @@
 
 }
 
-.footer-text {
-    list-style: none;
-    display: flex;
+.ulfooter{
     justify-content: space-between;
-    flex-direction: row;
+}
+.footer-text {
+    display: flex;
+    justify-content: center;
+ 
+
+}
+
+.footer-cata {
+    display: flex;
+    justify-content: flex-end;
+    
 }
