--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,25 @@
+*{
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0px;
+    background-color: rgb(21, 21, 59);
+}
+
+/*HEADER*/
 
 .header {
-
-    background-color: rgb(201, 161, 161);
+    background-color: rgb(30, 30, 83);
+    border-bottom: solid 1px rgb(164, 123, 164);
+    height: 180px;
     margin: 0px;
-    padding: 5px 15px;
+    padding: 30px 15px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
+
+/*LOGO*/
 
 .logo-sec {
     display: flex;
@@ -12,32 +27,61 @@
 }
 
 .logo-img {
-    width: 200px;
+    height: 90px;
+}
+
+/*NAV-BAR*/
+
+.ulnavbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .navbar {
     display: flex;
     justify-content: center;
+    float: center;
 }
 
 .navbar-items {
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right: 8px;
+
+
 }
 
-.form {
-    display: flex;
-    justify-content: flex-end;
+/*FORM*/
+
+.form input[type=text] {
+    float: right;
+    padding: 6px;
+    margin-right: 16px;
+    font-size: 15px;
+    border: 1px solid #ccc;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
+/*FOOTER*/
+
+.footer {
+    background-color: rgb(30, 30, 83);
+    border-top: solid 1px rgb(164, 123, 164);
+    margin: 0px;
+    padding: 30px 15px;
 }
 
 .ulfooter {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
 
 .footer-text {
     list-style: none;
-
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: whitesmoke;
 }
