--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,7 @@ body {
 .header {
     background-color: rgb(30, 30, 83);
     border-bottom: solid 1px rgb(164, 123, 164);
-    height: 180px;
-    margin: 0px;
-    padding: 30px 15px;
+    height: 190px;
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -27,7 +25,10 @@ body {
 }
 
 .logo-img {
-    height: 90px;
+    height: 110px;
+    margin: 0px 30px;
+    margin-top: 20px;
+
 }
 
 /*NAV-BAR*/
@@ -50,7 +51,7 @@ body {
     color: whitesmoke;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-right: 8px;
-
+    font-size: 18px;
 
 }
 
@@ -60,12 +61,82 @@ body {
 
     display: flex;
     justify-content: end;
+    margin: 0px 20px;
 
 }
 
-.contenedor.input {
+/*MAIN*/
+
+.titulo {
+    color: azure;
+    margin: 20px 20px;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.portada-sec {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color:whitesmoke;
+    font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+}
+
+
+.portada {
+    width: 220px;
+    margin: 20px 20px;
+}
+
+
+.portada-img {
+    width: 100%;
+    height: 320px;
+}
+
+/*MAIN-DETALLES*/
+
+.titulo-detalle {
+    color: azure;
+    margin: 20px 20px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.portada-sec-detalle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color:whitesmoke;
+    font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+}
+
+
+.portada-detalle {
+    margin: 0px 20px;
+}
+
+.portada-img-detalle {
+    height: 350px;
+    width: 570px;
+}
+
+.h2 {
+    font-size: 18px;
+    text-decoration: underline;
 
 }
+
+.h3 {
+    color: lightblue;
+}
+
+.iframe {
+    margin: 0px 70px;
+}
+
 
 /*FOOTER*/
 
