--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
     height: 110px;
     margin: 0px 30px;
     margin-top: 20px;
-
 }
 
 /*NAV-BAR*/
@@ -52,17 +51,15 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-right: 8px;
     font-size: 18px;
-
+    font-weight: lighter;
 }
 
 /*FORM*/
 
 .contenedorPadre {
-
     display: flex;
     justify-content: end;
     margin: 0px 20px;
-
 }
 
 /*MAIN*/
@@ -72,7 +69,9 @@ body {
     margin: 20px 20px;
     font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
 }
+
 .portada-sec {
     display: flex;
     flex-direction: row;
@@ -83,12 +82,10 @@ body {
     font-size: 12px;
 }
 
-
 .portada {
     width: 220px;
     margin: 20px 20px;
 }
-
 
 .portada-img {
     width: 100%;
@@ -101,8 +98,10 @@ body {
     color: azure;
     margin: 20px 20px;
     font-size: 20px;
+    font-weight: lighter;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .portada-sec-detalle {
     display: flex;
     flex-direction: row;
@@ -110,9 +109,8 @@ body {
     flex-wrap: wrap;
     color:whitesmoke;
     font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 12px;
+    font-size: 15px;
 }
-
 
 .portada-detalle {
     margin: 0px 20px;
@@ -120,23 +118,32 @@ body {
 
 .portada-img-detalle {
     height: 350px;
-    width: 570px;
+    width: 250px;
 }
 
 .h2 {
     font-size: 18px;
-    text-decoration: underline;
-
+    font-style: italic;
+    font-weight: lighter;
+    margin-bottom: 40px;
 }
 
 .h3 {
     color: lightblue;
+    text-decoration: none;
+    font-size: 15px;
+    font-family:  'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+}
+
+.p {
+   font-size: 15px;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .iframe {
     margin: 0px 70px;
 }
-
 
 /*FOOTER*/
 
