--- a/css/style.css
+++ b/css/style.css
@@ -211,13 +211,13 @@ a {
     .logo-sec
     
     .logo-img {
-        height: 80px;
+        height: 75px;
         margin: 0px 15px;
         margin-top: 20px;
     }
 
     .ulnavbar {
-        margin: 6px;
+        margin: 7px;
     }
     
     .navbar-items {
@@ -237,20 +237,10 @@ a {
     }
 
     .titulo {
-        color: azure;
-        margin: 20px 20px;
         font-size: 14px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-weight: lighter;
     }
 
     .portada-sec {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        color:whitesmoke;
-        font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 9px;
     }
     
@@ -266,93 +256,63 @@ a {
 
     .h2-generos {
         font-size: 16px;
-        font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: lightblue;
         margin: 10px 20px;
-        font-weight: lighter;
     }
 
     .li {
         font-size: 15px;
         margin-bottom: 10px;
-        background-color: rgba(173, 216, 230, 0.46);
-        max-width: max-content;
         padding: 8px;
-        border-radius: 12px;
     }
 
     .titulo-detalle {
-        color: azure;
-        margin: 15px 10px;
+        margin: 15px 20px;
         font-size: 14px;
-        font-weight: lighter;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
     .h2 {
-        font-size: 10px;
-        font-style: italic;
-        font-weight: lighter;
+        font-size: 12px;
         margin-bottom: 20px;
     }
 
     .h3 {
-        color: lightblue;
-        text-decoration: none;
-        font-size: 12px;
-        font-family:  'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-weight: bold;
+        font-size: 14px;
     }
 
     .portada-sec-detalle {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        color:whitesmoke;
-        font-family:'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 10px;
+        font-size: 12px;
     }
     
     .portada-detalle {
-        margin: 0px 10px;
+        margin: 0px 20px;
     }
     
     .portada-img-detalle {
-        height: 180px;
-        width: 120px;
+        height: 220px;
+        width: 160px;
     }
 
     .iframe {
         margin: 10px 0px;
         width: 300px;
         height: 180px;
-
     }
 
     .p {
-        font-size: 10px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        max-width: 350px;
-        color: whitesmoke;
-        text-decoration: none;
-     
+        font-size: 12px;
+        max-width: 350px;     
      }
 
-    .ulfooter {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0px;
-        font-size: 12px;
-    }
+     .footer {
+        height: 100px;
+     }
+
+     .ulfooter {
+        padding: 0px 0px;
+     }
+
     
-    .item-footer {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-    }
+
 
     
     
